@@ -6,6 +6,10 @@ DIST ZendFramework-1.10.1-apidoc.tar.gz 7325916 RMD160 2690d6c64be0fd4b6092b4e07
 DIST ZendFramework-1.10.1-manual-en.tar.gz 3307820 RMD160 a53a91f52a90f1a23d8db6dda6c99b3b7dd18308 SHA1 b8d69a27dcea773076d691260a5b9b88d2ffdbb5 SHA256 911cce094399c66db0d45d9b4d43baccde021957accdaebcf603ed1a1a30d129
 DIST ZendFramework-1.10.1-minimal.tar.gz 3575378 RMD160 a95aaff0f242175a070615cc62d84e08002c6c41 SHA1 822169e2c94c96ad76eebe13a8366e194fe46f3f SHA256 dcf8cb032ca31e06cf4706f52d7f46dee4e7a0a54f7616c8b4b4645f28bd5e0f
 DIST ZendFramework-1.10.1.tar.gz 18635312 RMD160 d6486b8f02373447590d61d162c757d4a319c20c SHA1 43fc830a0f0dcc0775fa2c5083402106c5cec715 SHA256 7a31aca2ca7db27326f0d04216acf4f1c90f6a79240d8b1389a68dbd69c9c5a2
+DIST ZendFramework-1.10.2-apidoc.tar.gz 7329687 RMD160 04485c12389e48ae23362c22f53f924590625d67 SHA1 26dc26b33fc8d2b2380fcb7a73f0214a6b84064d SHA256 1786a9da58729017983d70032ca850b0631150b542232256fdc0ec7328861dab
+DIST ZendFramework-1.10.2-manual-en.tar.gz 3302183 RMD160 0d340bb5acef03689b69976f6a66cca1ce1c6627 SHA1 bc67df6552da1f446aaa54f09856c6be34b21a16 SHA256 ea781f10a12963264e9629d3877153c28a0842cc543a8e63fe558bde42742613
+DIST ZendFramework-1.10.2-minimal.tar.gz 3578462 RMD160 fa752214081b2e9739927a4fc5d170c262533cbf SHA1 65b790d0f17bfbf2328aeb88d36ab9836eca3af4 SHA256 7d94fbc8b843cc00630afcefa5062209aaf0d67c0abe3a5cd1bab7d15b665cf8
+DIST ZendFramework-1.10.2.tar.gz 18706139 RMD160 05b032c5bf4d9d4ca4091b7b6aff60576e28f0be SHA1 7851b124f950d05105fb30fc664259b87b824882 SHA256 27436791fc099c89edd7b41a15529c291857afcdc875250fb39399a1372d2eea
 DIST ZendFramework-1.7.5-apidoc.tar.gz 4907260 RMD160 684773c9314361495c079a005b85b10468d6617c SHA1 bac648a9caa05d0afad1fb8bf14ff0a1c26f320f SHA256 10bb3ec7d3057baa9d9f20e82304bb72fd63b750771d00c9c112490dd9841624
 DIST ZendFramework-1.7.5-manual-en.tar.gz 1194554 RMD160 2354f57a18e6803f75a0fb2f3e48380cd664e480 SHA1 a10455cca14bad3848019369cdcf5d1db0ee1dc7 SHA256 2fab39b3b5e30c66d44e9ec5e4b88fef48a627fb2259aad58d555a3cdeabbb73
 DIST ZendFramework-1.7.5-minimal.tar.gz 2578136 RMD160 0d0371a7fdb1ce84390ec54b0f2f5478305261df SHA1 118f511b039a9f2cac2d68064392de3af544f4a8 SHA256 d74455ac522bc1e15a206b95c4571e2c3b41a4a33c2020a9252fab5fbdcb8a8b
@@ -28,11 +32,12 @@ DIST ZendFramework-1.9.7-minimal.tar.gz 3353008 RMD160 2fa26c26328bfa3f9aebfa904
 DIST ZendFramework-1.9.7.tar.gz 40778956 RMD160 eb3ed29b1232f15b9e6fd212b08925ae941d6ca2 SHA1 65558a2af5130cd5ea98c4abb446be27ce7ee2bd SHA256 94b5f1bbe8d5121c3430e0540c826b4abe8d2d5c34f754615a0f403cad84f5cc
 EBUILD ZendFramework-1.10.0.ebuild 2034 RMD160 110dcf5a48d6bbe920fc7b87afb632b7ba23d9a1 SHA1 22207c44b0d57cbf694376adb329049664ef6aaf SHA256 f9aae37abc6a87acecc3c7ed0c18045a73b37c7d5f1d7709dc3224851a31c5e2
 EBUILD ZendFramework-1.10.1.ebuild 2034 RMD160 275b248511302080f15d5ac239a9493776882eb6 SHA1 51d88a59524cecdf7339b774202c2ec0d7abd363 SHA256 72304e51c41e8eb95518750631fcd22f036584f5c1eab0f8e4651571e1ecd0f5
+EBUILD ZendFramework-1.10.2.ebuild 2034 RMD160 7995c43010b8ab29e0d5ccb0c96502d63d511a3c SHA1 8045532151472869611dc42b0660775c5273cf9c SHA256 109aac9c95c2a429481ee8cc4ac1e821cf63dd256b708b57965969880a0ab2c2
 EBUILD ZendFramework-1.7.5.ebuild 1726 RMD160 5ec1f69bcae5b12503d047df33170b8d7713acc5 SHA1 1ca00eae5995e511622435df837453756bd875f2 SHA256 022843e1c3ea0f3e6fd1033eaf72e333331a18fa610b7a9cff998e01a27d5a5f
 EBUILD ZendFramework-1.8.3.ebuild 2002 RMD160 abbccc32a98b0723f8e20242acaa33657ed50158 SHA1 1ce282b960fdf11c79c9c3e5464dee9557aa1811 SHA256 e026e2e54231967b820f8144550d9fd76e8ad46922ef56ac86e3295e8ddbb276
 EBUILD ZendFramework-1.9.2-r1.ebuild 1955 RMD160 d1b304ea59be67d8b1585036392a1901273d4512 SHA1 f9cc0b54636db09da5fb979a06ec403bafd9d69a SHA256 0d00e17828620822f8191e8b2063e357a598685623f1de26573efd63494f3373
 EBUILD ZendFramework-1.9.2.ebuild 2002 RMD160 435dc4d65e74a517a61b5221a6e1c3aafc8f539a SHA1 85a67f27817bf70785646b743396c9e0f556dd78 SHA256 4ee6797f9ba210de3ec082d05f99fbf61600a399979d2caf15f7a8541a095343
 EBUILD ZendFramework-1.9.6.ebuild 2037 RMD160 9a126f661266302ba6c77bc86a1a799a5a177f97 SHA1 847a5943ff0c7802d2de3d315e4ccbed9430dea5 SHA256 6f537ade7361ebc1d9a3a060a9eeaff84753b7caf642e4aee81c3e5d56fa3464
 EBUILD ZendFramework-1.9.7.ebuild 2033 RMD160 d9f06540d26d6097e1ab3c34edfa6244338ef118 SHA1 1abf4660877c03b227b41ad8074b1baa750c4fd2 SHA256 b65edea2e7d06aa81bbac0e407e2a7c6703d4dd409965b5a9931623638a8a0e5
-MISC ChangeLog 10106 RMD160 13ec0669b573540ae19da4891ed0570f28d69ae9 SHA1 e89bb623deec218deb7087112eb8506e07e7bdae SHA256 80656137ed2f19a84f8a8e0d85c4a443649da08c57f3a17249232ec5b4846706
+MISC ChangeLog 10239 RMD160 00ecb67694fd66eaea7568cc1af5569d7b24fd4d SHA1 35e01f8bcc39ecec98b38e042385b427eddf6e98 SHA256 c6f68e9e5f92aada1b0567d7aae1036fa6b41d7061f50720f065b2ea764faf34
 MISC metadata.xml 523 RMD160 129ba00df70b4e9d7ccb7b8dc828e9406f9e312d SHA1 f5e9925403974e649a44402617249bb9dcc34f92 SHA256 ea4383a6e685b9e68b44e3edf3494439ecaf4ac56e4bf1bc3cd5dd5c6427ccec
