@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.63 2010/02/12 00:05:32 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.64 2010/03/02 19:15:40 yngwin Exp $
+
+*ZendFramework-1.10.2 (02 Mar 2010)
+
+  02 Mar 2010; Ben de Groot <yngwin@gentoo.org>
+  +ZendFramework-1.10.2.ebuild:
+  Version bump
 
 *ZendFramework-1.10.1 (12 Feb 2010)
 
